tmp_test.txt
python :   File "<string>", line 16
위치 줄:1 문자:1
+ python -c "
+ ~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 16:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    print(f'테스트 1 결과: pass={result1[" pass\]}')
                                    ^
SyntaxError: unterminated string literal (detected at line 16)
